--- a/student-profiles/src/Styles/partials/_list.scss
+++ b/student-profiles/src/Styles/partials/_list.scss
@@ -2,7 +2,7 @@
   background-color: white;
   box-shadow: 6px 6px 2px -4px rgba(0, 0, 0, 0.45);
   width: 55rem;
-  max-height: 35rem;
+  height: 35rem;
   border-radius: 1rem;
   overflow-x: hidden;
   overflow-y: scroll;
