--- a/student-profiles/src/Styles/partials/_list.scss
+++ b/student-profiles/src/Styles/partials/_list.scss
@@ -13,8 +13,9 @@
 }
 .student-list {
   &__item {
+    position: relative;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     padding: 1rem;
     border-bottom: 1px solid $border-color;
   }
@@ -31,18 +32,45 @@
 
   &__info {
     margin-left: 2rem;
+    width: 100%;
   }
 
-  &__name {
+  &__header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__accordion-sign {
+    font-weight: bold;
+    margin: 0;
+  }
+
+  &__header {
     text-transform: uppercase;
-    font-size: 2.3rem;
     margin: 0;
     margin-bottom: 0.5rem;
+    font-size: 2.5rem;
   }
 
   &__text {
     margin: 0 0 0.3rem 1rem;
     font-size: 0.75rem;
     color: $secondary-text;
+    &--grade {
+      word-spacing: 1rem;
+    }
+  }
+
+  &__icon {
+    text-align: center;
+    font-size: 3rem;
+    color: $secondary-text;
+    font-weight: 500;
+    cursor: pointer;
+    &:hover,
+    &:active {
+      color: #323232;
+    }
   }
 }
