--- a/student-profiles/src/Styles/main.scss
+++ b/student-profiles/src/Styles/main.scss
@@ -1,6 +1,8 @@
 // Global
 @import "partials/variables";
 @import "partials/global";
+
 // Component
 @import "partials/list";
 @import "partials/searchbar";
+@import "partials/tags.scss";
