--- a/student-profiles/src/Styles/partials/_variables.scss
+++ b/student-profiles/src/Styles/partials/_variables.scss
@@ -6,5 +6,5 @@ $raleway: "Raleway", sans-serif;
 
 $bg-color: #f2f2f2;
 $border-color: #dfdfdf;
-$dark-border-color: #323232;
+$primary-color: #323232;
 $secondary-text: #707070;
